# WanderWise

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wanderwise_memory.db
.github/workflows/: ci.yml  reingest.yml
backend/app/: config.py  logging_config.py  main.py
backend/app/agents/: action.py  activities_booking.py  rag.py  travel_search.py  weather.py
backend/app/booking/: duffel_provider.py  mock_provider.py  provider.py
backend/app/guardrails/: __init__.py  input.py  output.py  pii.py
backend/app/llm/: __init__.py  base.py  client.py  parsing.py
backend/app/memory/: cache.py  longterm.py  session.py  summary.py
backend/app/observability/: tracing.py
backend/app/orchestrator/: graph.py  router.py  state.py
backend/app/prompts/: registry.py  schema.py
backend/app/rag/: collections.py  decompose.py  embeddings.py  ingest.py  retriever.py  staleness.py
backend/app/reliability/: __init__.py  circuit.py  fallback.py  retry.py
backend/app/reservation_service/: semantics.py  service.py  (+1 more)
data/fixtures/: README.md  duffel_booking_sandbox.json  hallucination_japan_visa.json
docs/: decision-log.md  git-push-guide.md  implementation-state.md  wanderwise_build_index.md  wanderwise_entire_project_plan.md  wanderwise_phase0.md  wanderwise_phase1.md  wanderwise_phase2.md  wanderwise_phase3.md  wanderwise_phase4.md  wanderwise_phase5.md  wanderwise_phase6.md  wanderwise_prompt_versioning_plan.md
frontend/: vite.config.js
frontend/src/: App.css  App.jsx
scripts/: ingest_corpus.py  reingest.py
(+59 files in other folders)
